# ubook-rs

./: .gitignore  Cargo.toml  README.md
doc/: api.md
src/: api.rs  host.rs  lib.rs  main.rs  request.rs  storage.rs
src/backend/: mod.rs
src/backend/boluobao/: adapter.rs  auth.rs  mod.rs  types.rs
src/backend/boluobao/api/: auth.rs  author.rs  mod.rs  novel.rs  search.rs  user.rs
src/backend/boluobao/internal/: consts.rs  encrypt.rs  mod.rs  response.rs
src/cli/: cli.rs  handler.rs  mod.rs  parser.rs
src/share/: author.rs  misc.rs  mod.rs  novel.rs  user.rs
