[package]
name = "ubook"
authors = ["周上行Ryer <melaiiryer@gmail.com>"]
description = "A general online novel management tool."
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/zymelaii/ubbok-rs"
repository = "https://github.com/zymelaii/ubbok-rs"

[dependencies]
chrono = "0.4.30"
uuid = { version = "1.3.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
rust-crypto = "^0.2"
phf = { version = "0.11.1", features = ["macros"]}
url = "2.4.1"
serde_json = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies"] }
anyhow = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }
colored = "2.0.4"
prettytable-rs = "0.10.0"
directories = "5.0.1"
async-mutex = "1.4.0"
